application/pnats/overlays/production/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pnats
  labels:
    app.kubernetes.io/part-of: pnats
    environment: production
